added TAADAS project, updated contact section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@
                 <a href="https://www.linkedin.com/pub/una-gauper/54/8a0/a82"><button class="btn btn-lg"><p>LinkedIn</p><img class="icon" src="public/images/LinkedIn_Icon.png"></button></a>
             </div>
         </div>
+        <div class="featurette">
+            <img class="featurette-image img-circle img-responsive pull-left" src="public/images/taadas.png">
+            <h2 class="featurette-heading">Project #1:
+                <span class="text-muted"><a href="https://taadas.org">TAADAS</a></span>
+                <a href="https://github.com/umgauper/NEW_TAADAS"><img src="public/images/GitHub-Mark-32px.png"></a>
+            </h2>
+            <p class="lead">
+             I created a cloud-hosted Node.js application with Apostrophe Now CMS, which provided the TAADAS organization with a fully customizable, modern replacement of their old website. I moved their publications PDF library to an Amazon Web Services bucket, 
+authored a React.js shopping cart, and spearheaded the migration of the publications library from a SQL database to a MongoDB database.
+            </p>
+            <p class="skills"> <span>MongoDB</span> <span>Express</span> <span>AWS</span> <span>React</span> <span>Node.js</span></p>
+        </div>
         <hr class="featurette-divider" id="portfolio">
         <div class="featurette">
             <img class="featurette-image img-circle img-responsive pull-right"   src="public/images/team-square.png">
@@ -100,7 +112,7 @@
 
         <div class="featurette">
             <img class="featurette-image img-circle img-responsive pull-left" src="public/images/quiz3.png">
-            <h2 class="featurette-heading">Project #1:
+            <h2 class="featurette-heading">Project #2:
                 <span class="text-muted"><a href="http://unasquiz.herokuapp.com">Quiz App</a></span>
                 <a href="https://github.com/umgauper/JS_Quiz2"><img src="public/images/GitHub-Mark-32px.png"></a>
             </h2>
@@ -112,7 +124,7 @@
         <hr class="featurette-divider">
        <div class="featurette">
         <img class="featurette-image img-circle img-responsive pull-right" src="public/images/usdaUX.png">
-        <h2 class="featurette-heading">Project #2:
+        <h2 class="featurette-heading">Project #3:
             <span class="text-muted"><a href="https://protected-waters-45009.herokuapp.com">Interactive Form</a></span>
             <a href="https://github.com/umgauper/USDA-UX-Challenge"><img src="public/images/GitHub-Mark-32px.png"></a>
         </h2>
@@ -129,7 +141,7 @@
 
         <div class="featurette">
             <img class="featurette-image img-circle img-responsive pull-right" src="public/images/votingapp.png">
-            <h2 class="featurette-heading">Project #3:
+            <h2 class="featurette-heading">Project #4:
                 <span class="text-muted"><a href="https://votingapp.herokuapp.com">Voting</a></span>
                 <a href="https://github.com/umgauper/voting"><img src="public/images/GitHub-Mark-32px.png"></a>
             </h2>
@@ -139,10 +151,9 @@
             <p class="skills"> <span>MongoDB</span> <span>Express</span> <span>AngularJS</span> <span>Node.js</span></p>
         </div>
         <hr class="featurette-divider">
-
         <div class="featurette">
             <img class="featurette-image img-circle img-responsive pull-left" src="public/images/bookoutpost.png">
-            <h2 class="featurette-heading">Project #4:
+            <h2 class="featurette-heading">Project #5:
                 <span class="text-muted"><a href="https://fast-basin-2346.herokuapp.com/">Book Outpost</a></span>
                 <a href="https://github.com/umgauper/bookswap"><img src="public/images/GitHub-Mark-32px.png"></a>
             </h2>
@@ -151,10 +162,9 @@
             <p class="skills"> <span>MongoDB</span> <span>Express</span> <span>AngularJS</span> <span>Node.js</span><span>Google Books API</span></p>
         </div>
         <hr class="featurette-divider">
-
         <div class="featurette">
             <img class="featurette-image img-circle img-responsive pull-right" src="public/images/linkterest.png">
-            <h2 class="featurette-heading">Project #5:
+            <h2 class="featurette-heading">Project #6:
                 <span class="text-muted"><a href="https://fathomless-island-5214.herokuapp.com/">Linkterest</a></span>
                 <a href="https://github.com/umgauper/linkterest"><img src="public/images/GitHub-Mark-32px.png"></a>
             </h2>
@@ -163,7 +173,6 @@
             </p>
             <p class="skills"> <span>MongoDB</span> <span>Express</span> <span>AngularJS</span> <span>Node.js</span><span>angular-masonry.js</span></p>
         </div>
-
         <hr class="featurette-divider" id="contact">
         <!-- Contact -->
         <div class="featurette" class="contact">
@@ -171,11 +180,8 @@
             <h2 class="featurette-heading">
                 <span>Contact Me:</span>
             </h2>
-
-            <p class="lead" >I am a JavaScript developer with experience using object-oriented JavaScript programming patterns, writing RESTful APIs,
-                building software in a team environment using Git, and writing HTML5 and CSS3 that conforms to the latest web standards. As evidenced by my portfolio, I have built several projects with
-                MongoDB, Angular.js, Express, and Node.js. I am looking for a JavaScript developer position. You can contact me at <a href="mailto:umgauper@gmail.com">umgauper@gmail.com</a>,
-                or via my <a href="https://www.linkedin.com/pub/una-gauper/54/8a0/a82">LinkedIn</a> profile or <a href="https://twitter.com/umgauper">Twitter</a>.
+            <p class="lead">I am a software developer with experience working on all layers of web applications- from creating responsive designs with CSS and Bootstrap, authoring client-side interfaces with modern JavaScript frameworks (including ExtJS, Angular, and React), writing back-end code with both Node.js and Python, to managing and updating MongoDB databases. You can email me at <a href="mailto:umgauper@gmail.com">umgauper@gmail.com</a>,
+              or connect with me on <a href="https://www.linkedin.com/pub/una-gauper/54/8a0/a82">LinkedIn</a> or <a href="https://twitter.com/umgauper">Twitter</a>.
             </p>
         </div>
         <hr class="featurette-divider">
@@ -183,7 +189,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Una Gauper 2015</p>
+                    <p>Copyright &copy; Una Gauper 2017</p>
                 </div>
             </div>
         </footer>
@@ -195,7 +201,5 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="public/javascripts/bootstrap.min.js"></script>
-
 </body>
-
 </html>
