Added map section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         I then created a list of filters based on the toggle states of the color buttons, and filtered down the colors array using the list of filters.
     </p>
     <a class="jsbin-embed" href="http://jsbin.com/yifubeqecu/embed?js,output">Higher Order Functions on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
+    <h2 id="map">Map</h2>
+    <p>Map is a higher-order function built into the JavaScript language. Map takes an array, performs a transformation on each of the elements in the array,
+        and returns a new array containing those transformed elements.
+        Just like filters, using maps reduces the number of lines of code you need to write compared to doing the same transformation with a for loop.
+    </p>
+    <p>
+        I made an array of words and used map to reverse each of the words.
+    </p>
+    <a class="jsbin-embed" href="http://jsbin.com/kefawoy/embed?js,output">JS Bin on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
 </div>
 </body>
 </html>
