Added Reduce section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
         I made an array of words and used map to reverse each of the words.
     </p>
     <a class="jsbin-embed" href="http://jsbin.com/kefawoy/embed?js,output">JS Bin on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
+    <h2 id="reduce">Reduce</h2>
+    <p></p>
+    <p>Reduce is a higher-order function that, similar to map and filter, applies a function against each item in an array.
+        Each time the function passed to reduce is called, the first parameter is the returned value of the last call to the function.
+        The second parameter is the current item in the array.
+    </p>
+    <p>The genericness of reduce makes it helpful for solving a variety of problems.
+        I recently used reduce at work to merge rows of data that shared the same value on a particular field.
+        In this JSBin, I created an array of objects with different symbols and colors. I used reduce to merge the objects that had the same symbol and color.
+    </p>
+    <a class="jsbin-embed" href="http://jsbin.com/sidubav/embed?js,output">JS Bin on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
 </div>
 </body>
 </html>
