Updated JSBin for reduce

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         I recently used reduce at work to merge rows of data that shared the same value on a particular field.
         In this JSBin, I created an array of objects with different symbols and colors. I used reduce to merge the objects that had the same symbol and color.
     </p>
-    <a class="jsbin-embed" href="http://jsbin.com/sidubav/embed?js,output">JS Bin on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
+    <a class="jsbin-embed" href="http://jsbin.com/qegored/1/embed?js,output">JS Bin on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
 </div>
 </body>
 </html>
