--- a/index.html
+++ b/index.html
@@ -3,42 +3,56 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Higher Order Functions</title>
+    <title>Una Codes</title>
     <link rel="stylesheet" type="text/css" href="./umgauper.css">
 </head>
 <body>
 <script src="./umgauper.js"></script>
-<div id="#main">
-    <h2 id="hof">Higher-Order Functions</h2>
-    <p>A higher-order function is a function that uses another function, either taking in a function as a parameter, or returning a function as a result.
-        JavaScript's ability to implement higher-order functions is what makes JavaScript a functional programming language.
-        Using higher order functions can make your code more readable and improve your productivity. Filters are a common use-case of higher-order functions.
-    </p>
-    <p>
-        In this JSBin, I created an array containing a list of different colors.
-        I then created a list of filters based on the toggle states of the color buttons, and filtered down the colors array using the list of filters.
-    </p>
-    <a class="jsbin-embed" href="http://jsbin.com/yifubeqecu/embed?js,output">Higher Order Functions on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
-    <h2 id="map">Map</h2>
-    <p>Map is a higher-order function built into the JavaScript language. Map takes an array, performs a transformation on each of the elements in the array,
-        and returns a new array containing those transformed elements.
-        Just like filters, using maps reduces the number of lines of code you need to write compared to doing the same transformation with a for loop.
-    </p>
-    <p>
-        I made an array of words and used map to reverse each of the words.
-    </p>
-    <a class="jsbin-embed" href="http://jsbin.com/kefawoy/embed?js,output">JS Bin on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
-    <h2 id="reduce">Reduce</h2>
-    <p></p>
-    <p>Reduce is a higher-order function that, similar to map and filter, applies a function against each item in an array.
-        Each time the function passed to reduce is called, the first parameter is the returned value of the last call to the function.
-        The second parameter is the current item in the array.
-    </p>
-    <p>The genericness of reduce makes it helpful for solving a variety of problems.
-        I recently used reduce at work to merge rows of data that shared the same value on a particular field.
-        In this JSBin, I created an array of objects with different symbols and colors. I used reduce to merge the objects that had the same symbol and color.
-    </p>
-    <a class="jsbin-embed" href="http://jsbin.com/qegored/1/embed?js,output">JS Bin on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
+<div class="container" id="code">
+    <div class="left">
+        <h1>Una Codes</h1>
+        <ul>
+            <li><a href="./about.html">ABOUT</a></li>
+            <li><a href="#">CODE</a></li>
+        </ul>
+    </div>
+    <div class="right">
+        <h1>Functional Programming</h1>
+        <p>In an effort to improve my JavaScript skills, I'm going through the
+            <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&cad=rja&uact=8&ved=0ahUKEwiivfKgtbjYAhXkylQKHdLTCPsQtwIIMDAB&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DBMUiFMZr7vk&usg=AOvVaw3ZRq0p-wFyXzv-kyACytAk">Fun Fun Functions</a> video series on functional programming.
+            For each video, I'm writing a summary and then practicing the concept in JSBin.
+        </p>
+        <h2 id="hof">Higher-Order Functions</h2>
+        <p>A higher-order function is a function that uses another function, either taking in a function as a parameter, or returning a function as a result.
+            JavaScript's ability to implement higher-order functions is what makes JavaScript a functional programming language.
+            Using higher order functions can make your code more readable and improve your productivity. Filters are a common use-case of higher-order functions.
+        </p>
+        <p>
+            In this JSBin, I created an array containing a list of different colors.
+            I then created a list of filters based on the toggle states of the color buttons, and filtered down the colors array using the list of filters.
+        </p>
+        <a class="jsbin-embed" href="http://jsbin.com/yifubeqecu/embed?js,output">Higher Order Functions on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
+        <h2 id="map">Map</h2>
+        <p>Map is a higher-order function built into the JavaScript language. Map takes an array, performs a transformation on each of the elements in the array,
+            and returns a new array containing those transformed elements.
+            Just like filters, using maps reduces the number of lines of code you need to write compared to doing the same transformation with a for loop.
+        </p>
+        <p>
+            I made an array of words and used map to reverse each of the words.
+        </p>
+        <a class="jsbin-embed" href="http://jsbin.com/kefawoy/embed?js,output">JS Bin on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
+        <h2 id="reduce">Reduce</h2>
+        <p></p>
+        <p>Reduce is a higher-order function that, similar to map and filter, applies a function against each item in an array.
+            Each time the function passed to reduce is called, the first parameter is the returned value of the last call to the function.
+            The second parameter is the current item in the array.
+        </p>
+        <p>The genericness of reduce makes it helpful for solving a variety of problems.
+            I recently used reduce at work to merge rows of data that shared the same value on a particular field.
+            In this JSBin, I created an array of objects with different symbols and colors. I used reduce to merge the objects with the same symbol and color.
+        </p>
+        <a class="jsbin-embed" href="http://jsbin.com/qegored/1/embed?js,output">JS Bin on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
+    </div>
 </div>
 </body>
 </html>
