Added icon for tab, changed some text

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Una Codes</title>
     <link rel="stylesheet" type="text/css" href="./umgauper.css">
+    <link rel="shortcut icon" href="./images/ic_code_black_24dp_2x.png">
 </head>
 <body>
 <script src="./umgauper.js"></script>
