--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Una Codes</title>
     <link rel="stylesheet" type="text/css" href="./umgauper.css">
+    <link rel="shortcut icon" href="./images/ic_code_black_24dp_2x.png">
 </head>
 <body>
 <script src="./umgauper.js"></script>
@@ -18,9 +19,9 @@
     </div>
     <div class="right">
         <h1>Functional Programming</h1>
-        <p>In an effort to improve my JavaScript skills, I'm going through the
+        <p>As a JavaScript study project, I'm going through the
             <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&cad=rja&uact=8&ved=0ahUKEwiivfKgtbjYAhXkylQKHdLTCPsQtwIIMDAB&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DBMUiFMZr7vk&usg=AOvVaw3ZRq0p-wFyXzv-kyACytAk">Fun Fun Functions</a> video series on functional programming.
-            For each video, I'm writing a summary and then practicing the concept in JSBin.
+            For each video, I'm writing a summary and practicing the concept in JSBin.
         </p>
         <h2 id="hof">Higher-Order Functions</h2>
         <p>A higher-order function is a function that uses another function, either taking in a function as a parameter, or returning a function as a result.
