--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         </ul>
     </div>
     <div class="right">
-        <img src="./images/una.jpg"/>
+        <!--<img src="./images/una.jpg"/>-->
         <p>I'm Una Gauper. I'm a developer in Sacramento.
         I run <a href="https://www.meetup.com/Code-Review-Sacramento/">Code Review</a>, a Meetup for professional female developers.
         </p>
