--- a/index.html
+++ b/index.html
@@ -19,14 +19,20 @@
     </div>
     <div class="right">
         <h1>Functional Programming</h1>
+        <ul>
+            <li><a href="#hof">Higher-Order Functions</a></li>
+            <li><a href="#map">Map</a></li>
+            <li><a href="#reduce">Reduce</a></li>
+            <li><a href="#closures">Closures</a></li>
+        </ul>
         <p>As a JavaScript study project, I'm going through the
-            <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&cad=rja&uact=8&ved=0ahUKEwiivfKgtbjYAhXkylQKHdLTCPsQtwIIMDAB&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DBMUiFMZr7vk&usg=AOvVaw3ZRq0p-wFyXzv-kyACytAk">Fun Fun Functions</a> video series on functional programming.
+            <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&cad=rja&uact=8&ved=0ahUKEwiivfKgtbjYAhXkylQKHdLTCPsQtwIIMDAB&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DBMUiFMZr7vk&usg=AOvVaw3ZRq0p-wFyXzv-kyACytAk">Fun Fun Function</a> video series on functional programming.
             For each video, I'm writing a summary and practicing the concept in JSBin.
         </p>
         <h2 id="hof">Higher-Order Functions</h2>
         <p>A higher-order function is a function that uses another function, either taking in a function as a parameter, or returning a function as a result.
-            JavaScript's ability to implement higher-order functions is what makes JavaScript a functional programming language.
-            Using higher order functions can make your code more readable and improve your productivity. Filters are a common use-case of higher-order functions.
+            JavaScript's ability to implement higher-order functions is a feature of functional programming languages.
+            Using higher-order functions can make your code more readable and improve your productivity. Filters are a common use-case of higher-order functions.
         </p>
         <p>
             In this JSBin, I created an array containing a list of different colors.
@@ -43,7 +49,6 @@
         </p>
         <a class="jsbin-embed" href="http://jsbin.com/kefawoy/embed?js,output">JS Bin on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
         <h2 id="reduce">Reduce</h2>
-        <p></p>
         <p>Reduce is a higher-order function that, similar to map and filter, applies a function against each item in an array.
             Each time the function passed to reduce is called, the first parameter is the returned value of the last call to the function.
             The second parameter is the current item in the array.
@@ -53,6 +58,12 @@
             In this JSBin, I created an array of objects with different symbols and colors. I used reduce to merge the objects with the same symbol and color.
         </p>
         <a class="jsbin-embed" href="http://jsbin.com/qegored/1/embed?js,output">JS Bin on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
+        <h2 id="closures">Closures</h2>
+        <p>Closures are functions plus the lexical environment where that function was declared.
+        </p>
+        <p>In my JSBin, the function appendImages has access to the numberOfImages variable. Each time appendImages is called, the numberOfImages value increases by 1.
+        </p>
+        <a class="jsbin-embed" href="http://jsbin.com/qobuvij/embed?js,output">JS Bin on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
     </div>
 </div>
 </body>
