--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
         <p>I'm Una Gauper. I'm a developer in Sacramento.
         I run <a href="https://www.meetup.com/Code-Review-Sacramento/">Code Review</a>, a Meetup for professional female developers.
         </p>
+        <!--TODO Add links to twitter, LinkedIn-->
     </div>
 </div>
 </body>
