--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="#reduce">Reduce</a></li>
             <li><a href="#closures">Closures</a></li>
             <li><a href="#currying">Currying</a></li>
+            <li><a href="#recursion">Recursion</a></li>
         </ul>
         <p>As a JavaScript study project, I'm going through the
             <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&cad=rja&uact=8&ved=0ahUKEwiivfKgtbjYAhXkylQKHdLTCPsQtwIIMDAB&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DBMUiFMZr7vk&usg=AOvVaw3ZRq0p-wFyXzv-kyACytAk">Fun Fun Function</a> video series on functional programming.
@@ -74,6 +75,9 @@
         <p>For the previous JSBin, for simplicity, I showed an example of a curried function that took one parameter at a time. But you can pass more than one parameter, as I do in the following JSBin.
         </p>
         <a class="jsbin-embed" href="http://jsbin.com/zugirus/2/embed?js,console">JS Bin on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
+        <h2 id="recursion">Recursion</h2>
+        <p>A recursive function is a function that calls itself until it doesn't anymore. I took the example from the video and made a recursive function that creates a div of each category and appends it to its parent category.</p>
+        <a class="jsbin-embed" href="http://jsbin.com/nipaxiw/5/embed?js,output">JS Bin on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?4.1.1"></script>
     </div>
 </div>
 </body>
